--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.215) UNRELEASED; urgency=medium
+
+  * do-release-upgrade: indicate that -p and -d switches are mutually
+    exclusive (LP: #1071025)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 07 Mar 2014 08:58:53 -0800
+
 ubuntu-release-upgrader (1:0.214) trusty; urgency=medium
 
   * DistUpgrade/DistUpgradeQuirks.py: On 12.04 stop the upgrade process if the
