--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.216) UNRELEASED; urgency=medium
+
+  * debian/control.py: depend on python3-apport since the release upgrader for
+    U will be using python3 not python2.
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 10 Mar 2014 09:37:57 -0700
+
 ubuntu-release-upgrader (1:0.215) trusty; urgency=medium
 
   * do-release-upgrade: indicate that -p and -d switches are mutually
