--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:0.216) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:0.216) trusty; urgency=medium
 
   * debian/control.py: depend on python3-apport since the release upgrader for
     U will be using python3 not python2.
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 10 Mar 2014 09:37:57 -0700
+ -- Brian Murray <brian@ubuntu.com>  Mon, 10 Mar 2014 10:01:49 -0700
 
 ubuntu-release-upgrader (1:0.215) trusty; urgency=medium
 
