--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-ubuntu-release-upgrader (1:0.216.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:0.216.1) trusty; urgency=medium
 
   * debian/control: do not depend on python3-apport as this recommends apport
     which pull in a lot more packages on servers.
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 13 Mar 2014 10:04:27 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 13 Mar 2014 10:06:07 -0700
 
 ubuntu-release-upgrader (1:0.216) trusty; urgency=medium
 
