--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+ubuntu-release-upgrader (1:0.218) UNRELEASED; urgency=medium
+
+  * DistUpgrade/DistUpgradeApport.py: for crashes in the release upgrader
+    tarball set the package version to the one from the tarball i.e.
+    DistUpgradeVersion.py.
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 18 Mar 2014 11:12:09 -0700
+
 ubuntu-release-upgrader (1:0.217) trusty; urgency=medium
 
   * debian/91-release-upgrade: if using the development release don't check
