--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-ubuntu-release-upgrader (1:0.219.1) UNRELEASED; urgency=medium
+ubuntu-release-upgrader (1:0.219.1) trusty; urgency=medium
 
   * DistUpgrade/DistUpgradeApport.py: if we are running with a display set
     assume that update-notifier is running and do not launch apport thereby
     preventing it from being launched two times. (LP: #1294814)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 28 Mar 2014 07:33:21 -0700
+ -- Brian Murray <brian@ubuntu.com>  Fri, 28 Mar 2014 07:43:25 -0700
 
 ubuntu-release-upgrader (1:0.219) trusty; urgency=medium
 
