--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+ubuntu-release-upgrader (1:0.220) trusty; urgency=low
+
+  * DistUpgrade/DistUpgradeCache.py: 
+    - add Debug::pkgDepCache::Marker into the apt.log debug output
+  * data/removal_blacklist.cfg: 
+    - gnome-session does not need special protection anymore
+  * DistUpgrade/DistUpgradeViewText.py: 
+    - do not crash on EPIPE from the pager (e.g. if the user
+      closes the pager early)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Apr 2014 17:39:37 +0200
+
 ubuntu-release-upgrader (1:0.219.4) trusty; urgency=low
 
   * data/release-upgrades:
