--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.220.3) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix crash in free space check for certain locales (LP: #1172740)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 24 Apr 2014 13:21:25 +0200
+
 ubuntu-release-upgrader (1:0.220.2) trusty; urgency=medium
 
   * DistUpgrade/DistUpgradeController.py:
