--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ubuntu-release-upgrader (1:0.220.4) UNRELEASED; urgency=low
+
+  * data/DistUpgrade.cfg:
+    - fix kernel removal version
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 02 May 2014 13:22:58 +0200
+
 ubuntu-release-upgrader (1:0.220.3) trusty-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
